# keywordlens-ai

./: .gitignore  App.tsx  README.md  demo_zhipu_filter.py  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  start_app.bat  types.ts  utils.ts  uv_setup.bat  vite.config.ts
amazon-keyword-filter/: SKILL.md  run.py  server.py
amazon-keyword-filter/assets/: config.template.json
amazon-keyword-filter/references/: ai-mode.md  api_reference.md  configuration.md  new-scripts-guide.md  semantic-filtering-guide.md  troubleshooting.md
amazon-keyword-filter/scripts/: analyze_keyword_with_ai.py  auto_filter_with_ai.py  batch_analyze_with_ai.py  generate_product_description.py  merge_images.py  search_amazon.py  setup_env.py  workflow_engine.py  zhipu_scoring.py  zhipu_vision.py
amazon-keyword-filter/tests/: README.md  __init__.py  test_merge_images.py  test_utils.py
components/: FileUpload.tsx  ProcessingDashboard.tsx  ReviewInterface.tsx
services/: api.ts  gemini.ts  glm.ts
